# yuki-utilities

./: .gitignore  CMakeLists.txt  README.md
result/: test.py
src/: core.h  main.cpp
src/audio/: audio.h  common.h  features.cpp  features.h  io_wav.cpp  io_wav.h  signal_process.cpp  signal_process.h
src/image/: color_map.cpp  color_map.h  common.h  draw.cpp  draw.h  image.h
src/math/: geometry.h  math.h  mathutils.cpp  mathutils.h  solver.cpp  solver.h
src/media/: ffmpeg.h  generic_stream.h  media.h
